stream added